Bug 323772 - Routing paints route in wrong place
Summary: Routing paints route in wrong place
Status: RESOLVED FIXED
Alias: None
Product: marble
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.6 (KDE 4.11)
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Dennis Nienhüser
URL: https://github.com/DennisOSRM/Project...
Keywords:
Depends on:
Blocks:
 
Reported: 2013-08-20 12:42 UTC by Martin Stolpe
Modified: 2013-08-20 21:48 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.1
Sentry Crash Report:


Attachments
example of wrong route painting (977.67 KB, image/png)
2013-08-20 12:43 UTC, Martin Stolpe
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Stolpe 2013-08-20 12:42:17 UTC
When I use the routing feature the found route will be painted in the wrong place (see attached screenshot).

Reproducible: Always

Steps to Reproduce:
1. Enter start and destination
2. "Get Directions"
Actual Results:  
Found route is painted somewhere on the globe.

Expected Results:  
Route should be painted between start and destination.
Comment 1 Martin Stolpe 2013-08-20 12:43:27 UTC
Created attachment 81802 [details]
example of wrong route painting
Comment 2 Dennis Nienhüser 2013-08-20 20:50:42 UTC
Thanks for reporting.
Comment 3 Dennis Nienhüser 2013-08-20 21:03:59 UTC
Found out what's going wrong on the Marble side, but need more info to fix it. See https://github.com/DennisOSRM/Project-OSRM/issues/713

You can work around it by deactivating the OSRM backend in Marble's routing config dialog for the time being.
Comment 4 Dennis Nienhüser 2013-08-20 21:34:26 UTC
Status change according to https://github.com/DennisOSRM/Project-OSRM/issues/713#issuecomment-22978347
Comment 5 Dennis Nienhüser 2013-08-20 21:34:55 UTC
Git commit 52723ddaeb42eef22617e9fdebbb5aed64ff4cec by Dennis Nienhüser.
Committed on 20/08/2013 at 21:31.
Pushed by nienhueser into branch 'master'.

Fix polyline decoding.

M  +2    -2    src/plugins/runner/open-source-routing-machine/OSRMRunner.cpp

http://commits.kde.org/marble/52723ddaeb42eef22617e9fdebbb5aed64ff4cec
Comment 6 Dennis Nienhüser 2013-08-20 21:48:43 UTC
Git commit 0e14aab75444b4238a430c0eaf373c3fdd5d427f by Dennis Nienhüser.
Committed on 20/08/2013 at 21:31.
Pushed by nienhueser into branch 'KDE/4.11'.

Fix polyline decoding. Fixes rendering of routes from the OSRM backend.
FIXED-IN: 4.11.1
(cherry picked from commit 52723ddaeb42eef22617e9fdebbb5aed64ff4cec)

M  +2    -2    src/plugins/runner/open-source-routing-machine/OSRMRunner.cpp

http://commits.kde.org/marble/0e14aab75444b4238a430c0eaf373c3fdd5d427f