Fix polyline decoding. Fixes rendering of routes from the OSRM backend.

BUG: 323772
FIXED-IN: 4.11.1
(cherry picked from commit 52723ddaeb42eef22617e9fdebbb5aed64ff4cec)